unpackaged/main/default/objects/AcctSeed__Import_Template__c/fields/AcctSeed__Parent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Parent__c</fullName>
    <inlineHelpText>Specify the parent of the detail object.  If none, leave this blank.</inlineHelpText>
    <label>Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Import_Objects</valueSetName>
    </valueSet>
</CustomField>