unpackaged/main/default/objects/AcctSeed__Import_Template__c/fields/AcctSeed__Parent_Relationship__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Parent_Relationship__c</fullName>
    <inlineHelpText>If a parent object is specified, then enter the API Name of the parent that exists on the detail object. If a parent object is not specified, leave this blank.</inlineHelpText>
    <label>Parent Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>