unpackaged/main/default/objects/AcctSeed__Import_Template__c/fields/AcctSeed__Total_Key_Fields__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total_Key_Fields__c</fullName>
    <label>Total Key Fields</label>
    <summaryFilterItems>
        <field>AcctSeed__Import_Field__c.AcctSeed__Key_Field__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Import_Field__c.AcctSeed__Import_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>