unpackaged/main/default/objects/AcctSeed__Import_Template__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Detail__c</columns>
    <columns>AcctSeed__Parent__c</columns>
    <columns>AcctSeed__Parent_Relationship__c</columns>
    <columns>AcctSeed__Headers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>